--- a/index.html
+++ b/index.html
@@ -4,40 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /* ส่วนนี้คือ CSS*/
+        /* ใช้สำหรับแต่ง (id class)*/
+    @font-face {
+        font-family: 'Kanit';
+        src: url('./Kanit/Kanit-Regular.ttf');
+    }
+            body {
+                font-family: 'Kanit';
+            }
+            .container {
+                width: 400px;
+                margin-left: auto;
+                margin-right: auto;
+                background-color: lightpink;
+                padding: 20px;
+            }
+            .header {
+                font-size: 30px;
+                text-align: center;
+                margin-bottom: 20px;
+            }
+            .header-form {
+                width: 140px;
+            }
+            .flex {
+                display: flex;
+            }
+            .form-input {
+                margin-bottom: 10px;
+            }
+            input.form, textarea {
+                border: 1px solid #ccc;
+                width: 100%;
+            }
+            .center {
+                text-align: center;
+            }
+            .button {
+                border: 1px solid black;
+                width: 100%;
+                height: 40px;
+            }
+            
+    </style>
+    
 </head>
 <body>
-    <h1>Register from</h1>
-    ชื่อ <input type="text">
-    นามสกุล <input type="text">
-    อายุ <input type="number" min="0" max="100">
-    <div>
-        เพศ 
+<!--form-->   
+<div class="container"> 
+        <div class="header">
+            Register from
+        </div>
+        <div class="flex form-input">
+            <div class="header-form">ชื่อ</div>
+            <input class="form" type="text">
+        </div>
+        <div class="flex form-input">
+            <div class="header-form">นามสกุล</div>
+            <input class="form" type="text">
+        </div>
+        <div class="flex form-input">
+            <div class="header-form">อายุ</div>
+            <input class="form" type="number" min="0" max="100">
+        </div>
+
+    <div class="gender form-input">
+        <div class="header-form">เพศ</div> 
         <div>
             <input name="gender" type="radio"> ชาย
-        </div>
-        <div>
             <input name="gender" type="radio"> หญิง
-        </div>
-        <div>
             <input name="gender" type="radio"> อื่นๆ
         </div>
     </div>
-    <div>
+    <div class="form-input">
         งานอดิเรก
         <div>
-            <input name="hobby" type="checkbox"> อ่านนิยาย
+            <input name="interest" type="checkbox"> อ่านหนังสือ
         </div>
         <div>
-            <input name="hobby" type="checkbox"> ดูหนัง
+            <input name="interest" type="checkbox"> ดูหนัง
         </div>
         <div>
-            <input name="hobby" type="checkbox"> ฟังเพลง
+            <input name="interest" type="checkbox"> ฟังเพลง
         </div>
     </div>
-    <div>
+    <div class="form-input">
         คำอธิบาย
         <textarea></textarea>
     </div>
-        <button>ส่งข้อมูล</button>git
+    <div class="center">
+        <button class="button">ส่งข้อมูล</button>
+    </div>
+</div>
+  
 </body>
 </html>
