--- a/index.html
+++ b/index.html
@@ -1,66 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!--ไม่แสดงออกหน้าเว็บ-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
+
 <body>
-<!--form-->   
-<div class="container"> 
+    <!--form-->
+    <div class="container">
         <div class="header">
-            Register from
+            Register Form
         </div>
+
         <div class="flex form-input">
             <div class="header-form">ชื่อ</div>
             <input class="form" name="firstname" type="text">
         </div>
+
         <div class="flex form-input">
             <div class="header-form">นามสกุล</div>
             <input class="form" name="lastname" type="text">
         </div>
+
         <div class="flex form-input">
             <div class="header-form">อายุ</div>
             <input class="form" name="age" type="number" min="0" max="100">
         </div>
 
-    <div class="gender form-input">
-        <div class="header-form">เพศ</div> 
-        <div class="flex">
+        <div class="flex gender form-input">
+            <div class="header-form">เพศ</div>
+            <div class="flex">
+                <div>
+                    <input name="gender" type="radio" value="ชาย"> ชาย
+                </div>
+                <div>
+                    <input name="gender" type="radio" value="หญิง"> หญิง
+                </div>
+                <div>
+                    <input name="gender" type="radio" value="ไม่ระบุ"> ไม่ระบุ
+                </div>
+            </div>
+        </div>
+
+        <div class="form-input">
+            งานอดิเรก
             <div>
-                <input name="gender" type="radio"> ชาย
+                <input name="interest" type="checkbox" value="อ่านหนังสือ"> อ่านหนังสือ
             </div>
             <div>
-                <input name="gender" type="radio"> หญิง
+                <input name="interest" type="checkbox" value="ดูหนัง"> ดูหนัง
             </div>
             <div>
-                <input name="gender" type="radio"> อื่นๆ
+                <input name="interest" type="checkbox" value="ฟังเพลง"> ฟังเพลง
             </div>
-            
         </div>
-    </div>
-    <div class="form-input">
-        งานอดิเรก
-        <div>
-            <input name="interest" type="checkbox" value="อ่านหนังสือ"> อ่านหนังสือ
+
+        <div class="form-input">
+            คำอธิบาย
+            <textarea name="description"></textarea>
         </div>
-        <div>
-            <input name="interest" type="checkbox" value="ดูหนัง"> ดูหนัง
+
+        <div id=message class="message"></div>
+
+        <div class="center">
+            <button onclick="submitData()" class="bunton">ส่งข้อมูล</button>
         </div>
-        <div>
-            <input name="interest" type="checkbox" value="ฟังเพลง"> ฟังเพลง
-        </div>
+
     </div>
-    <div class="form-input">
-        คำอธิบาย
-        <textarea name="description"></textarea>
-    </div>
-    <div class="center">
-        <button onclick="submitData()" class="button">ส่งข้อมูล</button>
-    </div>
-</div>
-<script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    <script src="index.js"></script>
+
 </body>
+
 </html>
