--- a/HTML.html
+++ b/HTML.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .left {
+        float: left;
+    }
+    .right {
+        float: right;
+    }
+    .image {
+                background-image: url('https://fastly.picsum.photos/id/866/200/300.jpg?hmac=rcadCENKh4rD6MAp6V_ma-AyWv641M4iiOpe1RyFHeI');
+                height: 200px;
+                width: 100px;
+                background-size: contain;
+                background-position: top left;
+                background-repeat: no-repeat;
+            }
+</style>
 <body>
     <!--ส่วนนี้จะแสดงออกที่หน้าจอของ Browser-->
     <!--1. html content-->
@@ -72,5 +88,12 @@ height="100px">
     <h1>WWF's Panda symbol</h1>
     <p>The Panda has become the symbol of WWF. The well-known panda logo of WWF originated from a panda named Chi Chi that was transferred from the Beijing Zoo to the London Zoo in the same year of the establishment of WWF.</p>
     </section>
+    <div class="left">
+        <img src="https://fastly.picsum.photos/id/866/200/300.jpg?hmac=rcadCENKh4rD6MAp6V_ma-AyWv641M4iiOpe1RyFHeI">
+    </div>
+    <div class="left">
+        Test
+    </div>
+    <div class="image">ทดสอบ</div>
 </body>
 </html>
