--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <!--form-->
+    <a href="user.html" class="button-User">Go to User management</a>
     <div class="container">
         <div class="header">
             Register Form
@@ -64,10 +65,10 @@
             <textarea name="description"></textarea>
         </div>
 
-        <div id=message class="message"></div>
+        <div id="message" class="message"></div>
 
         <div class="center">
-            <button onclick="submitData()" class="bunton">ส่งข้อมูล</button>
+            <button onclick="submitData()" class="button">ส่งข้อมูล</button>
         </div>
 
     </div>
