--- a/user.html
+++ b/user.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style-user.css">
 </head>
+
 <body>
-    <a href="index.html">Back to register</a>
-    User management page
-    <div id="user"></div>
+    <a href="index.html" class="button-User">Back to register</a>
+    <div class="header">User management page</div>
+    <div class="container">
+        <div id="user"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-<script src="user.js"></script>    
+    <script src="user.js"></script>
+
 </body>
+
 </html>
