--- a/user.html
+++ b/user.html
@@ -14,9 +14,25 @@
     <div class="container">
         <div id="user"></div>
     </div>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Interests</th>
+                <th>Description</th>
+                <th>Edit/Delete</th>
+            </tr>
+        </thead>
+        <tbody id="userTableBody">
+            <!-- ข้อมูลจะถูกแทรกเข้าไปที่นี่ -->
+        </tbody>
+    </table>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="user.js"></script>
-
 </body>
 
 </html>
